<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user_model_user_infomation_bg"
    >

    <ImageView
        android:id="@+id/iv_user_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/user_model_icon_user_head"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="用户名"
            android:textSize="@dimen/user_model_user_info_name"
            android:layout_marginTop="1.5dp"
            android:layout_below="@+id/iv_user_head"
            android:layout_centerHorizontal="true"
            android:id="@+id/tv_userNameTitle" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/btn_user_info"
            android:layout_width="@dimen/user_model_user_info_item_width_size"
            android:layout_height="@dimen/user_model_user_info_item_height_size"
            android:layout_marginTop="30.5dp"
            android:background="@drawable/user_model_user_infomation_item_bg"
            android:layout_below="@+id/tv_userNameTitle"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/user_model_icon_user_info"
            android:paddingLeft="@dimen/user_model_user_info_item_left_size"
            android:drawableRight="@drawable/user_model_icon_user_right"
            android:paddingRight="@dimen/user_model_user_info_item_left_size"
            android:text="@string/user_model_personalInformation"
            android:textSize="@dimen/user_model_input_text_size"
            android:gravity="left|center_vertical"
            android:drawablePadding="@dimen/user_model_user_info_item_image_text_padding_left"
            ></Button>
    <Button
        android:textAllCaps="false"
        android:id="@+id/btn_param_setting"
        android:layout_width="@dimen/user_model_user_info_item_width_size"
        android:layout_height="@dimen/user_model_user_info_item_height_size"
        android:layout_marginTop="@dimen/user_model_user_info_item_padding_top"
        android:background="@drawable/user_model_user_infomation_item_bg"
        android:layout_below="@+id/btn_user_info"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/user_model_icon_user_setting"
        android:paddingLeft="@dimen/user_model_user_info_item_left_size"
        android:drawableRight="@drawable/user_model_icon_user_right"
        android:paddingRight="@dimen/user_model_user_info_item_left_size"
        android:text="@string/user_model_HandsetParameterSetting"
        android:textSize="@dimen/user_model_input_text_size"
        android:gravity="left|center_vertical"
        android:drawablePadding="@dimen/user_model_user_info_item_image_text_padding_left"
        ></Button>
    <Button
        android:textAllCaps="false"
        android:id="@+id/btn_about"
        android:layout_width="@dimen/user_model_user_info_item_width_size"
        android:layout_height="@dimen/user_model_user_info_item_height_size"
        android:layout_marginTop="@dimen/user_model_user_info_item_padding_top"
        android:background="@drawable/user_model_user_infomation_item_bg"
        android:layout_below="@+id/btn_param_setting"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/user_model_icon_user_about"
        android:paddingLeft="@dimen/user_model_user_info_item_left_size"
        android:drawableRight="@drawable/user_model_icon_user_right"
        android:paddingRight="@dimen/user_model_user_info_item_left_size"
        android:text="@string/user_model_About"
        android:gravity="left|center_vertical"
        android:textSize="@dimen/user_model_input_text_size"
        android:drawablePadding="@dimen/user_model_user_info_item_image_text_padding_left"
        ></Button>
    
    <Button
        android:textAllCaps="false"
        android:id="@+id/btn_user_exit"
        android:layout_width="@dimen/user_model_user_info_item_width_size"
        android:layout_height="@dimen/user_model_user_info_item_height_size"
        android:background="@drawable/user_model_login_button"
        android:text="@string/user_model_signOut"
        android:layout_below="@+id/btn_about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51.5dp"
        android:textSize="@dimen/user_model_login_text_size"
        />
</RelativeLayout>