<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:background="#fff"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/user_model_user_setting_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"

            >

            <TextView

                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:paddingRight="20dp"
                android:text="@string/user_model_lowFrequency"
                android:textAllCaps="false"
                android:textColor="@color/user_model_select_text_title_color" />

            <TextView
                android:id="@+id/tv_low_frequency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1.8"
                android:background="@drawable/user_model_login_input"
                android:textColor="@color/user_model_change_password_back_bg"
                android:textSize="16dp"

                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="dBm"

                android:textColor="@color/user_model_item_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:paddingRight="20dp"
                android:text="@string/user_model_intermediateFrequency"
                android:textAllCaps="false"
                android:textColor="@color/user_model_select_text_title_color" />

            <TextView
                android:id="@+id/tv_medium_frequency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1.8"
                android:background="@drawable/user_model_login_input"
                android:textColor="@color/user_model_change_password_back_bg"
                android:textSize="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="dBm"
                android:textColor="@color/user_model_item_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView

                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|right"
                android:paddingRight="20dp"
                android:text="@string/user_model_highFrequency"
                android:textAllCaps="false"
                android:textColor="@color/user_model_select_text_title_color" />

            <TextView
                android:id="@+id/tv_high_frequency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1.8"
                android:background="@drawable/user_model_login_input"
                android:textColor="@color/user_model_change_password_back_bg"
                android:textSize="16dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="dBm"

                android:textColor="@color/user_model_item_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="-20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_pda_param_commit"
                android:layout_width="195dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="保存" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:orientation="horizontal">


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:text="@string/user_model_pda_note"
            android:textColor="#ffff9999"
            android:textSize="12sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:layout_marginBottom="142.5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal"
            android:gravity="center_vertical"

            >
        <TextView

            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|right"
            android:paddingRight="20dp"
            android:text="疫苗预警天数"
            android:textSize="14sp"
            android:textColor="@color/user_model_select_text_title_color"

            />

        <TextView
            android:visibility="gone"
            android:id="@+id/tv_print_matchine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/user_model_login_input"
            android:textSize="16dp"
            android:textColor="@color/user_model_item_color"
            />
            <com.kymjs.app.base_res.utils.view.addAndSubView.Baseres_AddAndSubView
                android:id="@+id/asv_prevention_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                app:baseres_maxValue="1"
                android:layout_weight="1"
                android:background="@drawable/user_model_login_input"
                android:textSize="16dp"
                android:textColor="@color/user_model_item_color"
                />

        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <Button
                android:id="@+id/btn_print_matchine"
                android:layout_width="195dp"
                android:layout_height="45dp"
                android:text="保存"
                />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:textAllCaps="false"
        android:id="@+id/btn_pda_param_save"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="bottom|center"
        android:layout_weight="0.4"
        android:background="#ff4661f5"
        android:text="@string/user_model_save" />
</LinearLayout>